Changed, css text align to sliders. made all shapes hollow, minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,9 @@ body {
     from {transform: scale(1);}
     to {transform: scale(1.2);}
 }
+
+.sliderNamePosition {
+    position: relative;
+    left: 1.5%;
+    
+}
